:lipstick: Fixed one case of too big table width

--- a/style.css
+++ b/style.css
@@ -820,12 +820,14 @@ input[type="search"] {
 }
 
 @media screen and (max-width: 767px) {
+	.responsive-table,
 	.responsive-table tr,
 	.responsive-table td,
 	.tix_tickets_table tr,
 	.tix_tickets_table td,
 	.tix_tickets_table th,
-	.tix_tickets_table tbody {
+	.tix_tickets_table tbody,
+	.tix_tickets_table {
 		display: block;
 		width: 100% !important;
 		min-width: 100% !important;
